add quick patch for fragment urls

--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,7 @@ body {
 .navbar-toggler-icon:focus {
     box-shadow: none;
 }
+
+html {
+  scroll-padding-top: 96px; /* height of sticky header */
+}
