--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,6 @@ body {
   }
 } 
 
-.day-indicator{
-  background-color: #FFF9A8;
-}
-
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
@@ -94,6 +90,12 @@ body {
 }
 
 /* TODO: implement more fancy theme setup with Sass */
+
+.day-indicator{
+  background-color: #ff5959;
+  color: #FFF9EE;
+}
+
 #main-navbar {
   background-color: #FFF7F7 !important;
 }
@@ -102,6 +104,23 @@ body {
   color: #3B3249 !important;
 }
 
-body {
-  background-color: #E6E4E8 !important;
+.event-item{
+  background-color: #FFF9EE;
+}
+/*
+body{
+  background-color: #ffd1d1;
+}
+*/
+
+.nav-fill {
+  background-color: #372E45 !important;
+}
+
+.nav-fill .nav-item > .active {
+  color: #f5ec42;
+}
+
+.nav-fill .nav-item > :not(.active) {
+  color: white;
 }
