--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,9 @@
 }
 
 /* manually adjust the height of navbar and footer as fix to floating footer problem */
-#infobody2 {
+#dataset{
   min-height: calc(100vh - 56px - 40px);
+  display:flex;
 }
 
 html {
@@ -107,11 +108,10 @@ body {
 .event-item{
   background-color: #FFF9EE;
 }
-/*
+
 body{
-  background-color: #ffd1d1;
+  background-color: #FFF9EE;
 }
-*/
 
 .nav-fill {
   background-color: #372E45 !important;
