--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,15 @@ body{
   background-color: #E6E4E8;
   color: #372E45;
 }
+
+/*
+.submitbutton {
+  background-color: #372E45;
+  color: #E6E4E8;
+}
+
+.submitbutton:active, .submitbutton:hover{
+  background-color: #1e1926 !important;
+  color: #E6E4E8 !important;
+}
+*/
